test path to nav images

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           NOTE: You have left Costco.com website and are entering the home improvement website provided for Costco members by Sunrun. This site was created to provide more information and to schedule consultations for Costco members. To review the privacy policy, click here.
         </div>
         <div class="navbar-right col-lg-2 hidden-xs hidden-sm hidden-md">
-          <a class="navbar-brand" href="#page-top"><img src="/img/costco-logo.png" alt="Costco Logo" height="78" /></a>
+          <a class="navbar-brand" href="#page-top"><img src="img/costco-logo.png" alt="Costco Logo" height="78" /></a>
         </div>
     </div>
     <!-- /.container-fluid -->
