fix broken paths to header images

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll  hidden-xs hidden-sm hidden-md" href="#page-top"><img src="/img/sunrun-logo.svg" alt="Sunrun Logo" height="68" /></a>
-            <a class="navbar-brand page-scroll  hidden-lg" href="#page-top"><img src="/img/sunrun-costco-logo.png" alt="Sunrun/Costco Logo" width="100%" /></a>
+            <a class="navbar-brand page-scroll  hidden-xs hidden-sm hidden-md" href="#page-top"><img src="img/sunrun-logo.svg" alt="Sunrun Logo" height="68" /></a>
+            <a class="navbar-brand page-scroll  hidden-lg" href="#page-top"><img src="img/sunrun-costco-logo.png" alt="Sunrun/Costco Logo" width="100%" /></a>
         </div>
         <div class="navbar-notice col-lg-7 hidden-xs">
           NOTE: You have left Costco.com website and are entering the home improvement website provided for Costco members by Sunrun. This site was created to provide more information and to schedule consultations for Costco members. To review the privacy policy, click here.
