Add the Costco webform inside an IFRAME

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </nav>
 
   <header>
-	<div class="container">
+	<div class="container-fluid">
   	<div class="row">
       <div class="header-content col-md-12">
           <div class="header-content-inner">
@@ -129,10 +129,8 @@
   					22 
   				</h4>
   				<p>
-  					States served 
-  				</p>
-  				<p>
-  					+ DC &amp; Puerto Rico 
+  					States&nbsp;served
+  					+&nbsp;DC&nbsp;&amp;&nbsp;Puerto Rico 
   				</p>
   				<hr>
   			</div>
@@ -144,13 +142,35 @@
   					megawatts deployed 
   				</p>
   			</div>
+        <p class="pull-right col-md-5 text-left text-muted">
+          * Based on trailing 12-month market share using publicly reported/GTM Research industry data and Sunrun's total megawatts of residential solar deployed through second quarter of 2018.
+        </p>
   		</div>
   	</div>
 	</div>    
 </header>
 
   <section class="" id="member-benefits">
-  <h1>Member Benefits</h1>
+  <div class="container">
+    <h2>Costco Member Benefits</h2>
+    <div class="row">
+      <div class="col-md-6">
+        <p>Costco members have access to great deals on  home solar from Sunrun.</p>
+        <ul>
+          <li>As a Costco member, you can receive a Costco Cash Card valued at 10% with your qualifying Sunrun solar purchases.<sup>*</sup></li>
+          <li>As an Executive Member, you can receive a 2% reward on your annual qualifying Costco purchases.<sup>**</sup></li>
+          <li>Plus, you can earn a cash back reward when you pay with your Costco Anywhere Visa® Cards by Citi.<sup>***</sup></li>
+        </ul>
+        <p>To upgrade your Costco Membership, or for more information on Executive Membership, stop by any Costco Warehouse or call 1-800-220-6000.</p>
+      </div>
+      <div class="col-md-6">
+        <img src="img/costco-cards.png" class="img-responsive" alt="Costco Credit Cards" />
+        <p class="text-muted text-left">*Applies to qualifying equipment purchases only (solar panels, inverters, racking and battery*) only.  Does not apply to installation.<br>
+**Terms, restrictions and annual maximums apply. See Membership Counter for details.<br>
+*** Subject to credit approval by Citi. Additional terms and conditions apply. Ask for details. Cash back rewards will be provided as an annual credit card reward certificate once your February billing statement from Citi closes and is redeemable for cash or merchandise at U.S. Costco warehouses including Puerto Rico. Citi is not responsible for products or services offered by other companies.</p>
+       </div>
+    </div>
+  </div>
 </section>
 
   <section id="products">
