Fix the spacing and background position on the member benefits section

--- a/index.html
+++ b/index.html
@@ -151,21 +151,21 @@
 </header>
 
   <section class="" id="member-benefits">
-  <div class="container">
+  <div class="container-fluid">
     <h2>Costco Member Benefits</h2>
     <div class="row">
       <div class="col-md-6">
-        <p>Costco members have access to great deals on  home solar from Sunrun.</p>
+        <p class="bottom-50">Costco members have access to great deals on  home solar from Sunrun.</p>
         <ul>
           <li>As a Costco member, you can receive a Costco Cash Card valued at 10% with your qualifying Sunrun solar purchases.<sup>*</sup></li>
           <li>As an Executive Member, you can receive a 2% reward on your annual qualifying Costco purchases.<sup>**</sup></li>
           <li>Plus, you can earn a cash back reward when you pay with your Costco Anywhere Visa® Cards by Citi.<sup>***</sup></li>
         </ul>
-        <p>To upgrade your Costco Membership, or for more information on Executive Membership, stop by any Costco Warehouse or call 1-800-220-6000.</p>
+        <p class="bottom-50">To upgrade your Costco Membership, or for more information on Executive Membership, stop by any Costco Warehouse or call 1-800-220-6000.</p>
       </div>
       <div class="col-md-6">
         <img src="img/costco-cards.png" class="img-responsive" alt="Costco Credit Cards" />
-        <p class="text-muted text-left">*Applies to qualifying equipment purchases only (solar panels, inverters, racking and battery*) only.  Does not apply to installation.<br>
+        <p class="text-muted text-left pull-right col-md-9">*Applies to qualifying equipment purchases only (solar panels, inverters, racking and battery*) only.  Does not apply to installation.<br>
 **Terms, restrictions and annual maximums apply. See Membership Counter for details.<br>
 *** Subject to credit approval by Citi. Additional terms and conditions apply. Ask for details. Cash back rewards will be provided as an annual credit card reward certificate once your February billing statement from Citi closes and is redeemable for cash or merchandise at U.S. Costco warehouses including Puerto Rico. Citi is not responsible for products or services offered by other companies.</p>
        </div>
