Update the Products section on the costco microsite

--- a/index.html
+++ b/index.html
@@ -174,9 +174,28 @@
 </section>
 
   <section id="products">
-    <div class="container">
-        <div class="row">
-            <h1>Products</h1>
+    <div class="container-fluid">
+        <div class="row"> 
+          <div class="col-md-6 text-center">
+            <img src="img/products-photo.png" alt="Products Photo" height="380" width="544" class="" />
+          </div>
+          <div class="col-md-6">
+              <h2>Clean, Reliable and Affordable Home Solar </h2>
+              <ul class="list-group">
+                <li class="list-group-item">
+                  <img src="img/lighting-blue.svg" alt="Lighting icon" width="41" height="41" align="left" />
+                  <p class="list-group-item-text">Control your energy costs and free yourself from rising electricity rates</p>
+                </li>
+                <li class="list-group-item">
+                  <img src="img/two-fingers.svg" alt="Two Fingers icon" width="41" height="41" align="left" />
+                  <p class="list-group-item-text">Receive the stability of a nationwide company and the expertise of a local shop</p>
+                </li>
+                <li class="list-group-item">
+                  <img src="img/trees.svg" alt="Trees icon" width="41" height="41" align="left" />
+                  <p class="list-group-item-text">Contribute to a healthier environment that reduces local air pollutants and builds a better community</p>
+                </li>
+              </div>              
+          </div>
         </div>
     </div>
 </section>
