Added the BrightBox Power outage slice to the Products section

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 </section>
 
   <section id="products">
-    <div class="container-fluid">
+    <div class="container-fluid top-bg">
         <div class="row"> 
           <div class="col-md-6 text-center">
             <img src="img/products-photo.png" alt="Products Photo" height="380" width="544" class="" />
@@ -194,9 +194,31 @@
                   <img src="img/trees.svg" alt="Trees icon" width="41" height="41" align="left" />
                   <p class="list-group-item-text">Contribute to a healthier environment that reduces local air pollutants and builds a better community</p>
                 </li>
-              </div>              
+              </ul>              
           </div>
         </div>
+    </div>
+    <div class="container-fluid bottom-bg">
+      <div class="row">
+        <div class="col-md-7">
+          <h2 class="text-white">Simple, Clean, & Safe Solar Power & Battery Storage Service for Your Home<sup>*</sup></h2>
+            <ul class="list-group">
+              <li class="list-group-item">
+                <img src="img/residential-battery.svg" alt="Residential Battery icon" width="32" height="32" align="left" />
+                <p class="list-group-item-text text-white">Stores excess solar energy which can be used to power select parts of your home during power outages</p>
+              </li>
+              <li class="list-group-item">
+                <img src="img/money.svg" alt="Money icon" width="32" height="32" align="left" />
+                <p class="list-group-item-text text-white">Save money by using stored solar power to offset peak energy rates</p>
+              </li>
+              <li class="list-group-item">
+                <img src="img/handshake.svg" alt="Handshake icon" width="32" height="32" align="left" />
+                <p class="list-group-item-text text-white">Every LG Chem battery comes with a 10-year warranty backed by LG</p>
+              </li>
+            </ul>
+            <p class="text-muted text-white"><sup>*</sup>Battery may not be available in all areas.</p>                        
+        </div>
+      </div>
     </div>
 </section>
 
