Updated the What to Expect section no the costco microsite

--- a/index.html
+++ b/index.html
@@ -223,9 +223,32 @@
 </section>
 
   <section class="" id="what-to-expect">
-    <div class="container-fluid">
-        <div class="row no-gutter">
-          <h1>What to Expect
+    <div class="container-fluid top-bg">
+        <div class="row">
+          <div class="col-md-6">
+            <h2>What to Expect</h2>
+            <ul class="list-group">
+              <li class="list-group-item">
+                <img src="img/phone.svg" alt="Phone icon" width="41" height="41" align="left" />
+                <p class="list-group-item-text">Sunrun will contact you, qualify your home, and schedule a consultation.</p>
+              </li>
+              <li class="list-group-item">
+                <img src="img/be-inventive.svg" alt="Be Inventive icon" width="41" height="41" align="left" />
+                <p class="list-group-item-text">A Sunrun solar design consultant will work with you to design a solar system specific for your needs.</p>
+              </li>
+              <li class="list-group-item">
+                <img src="img/check.svg" alt="Check icon" width="41" height="41" align="left" />
+                <p class="list-group-item-text">A Sunrun solar design consultant will take detailed measurements of your roof, finalize your design, and confirm the cost of your project.</p>
+              </li>
+              <li class="list-group-item">
+                <img src="img/mail.svg" alt="Mail icon" width="41" height="41" align="left" />
+                <p class="list-group-item-text">Sunrun will fulfill your order.</p>
+              </li>
+            </ul>                          
+          </div>
+          <div class="col-md-6 text-center">
+            <img src="img/what-to-expect-photo.png" alt="What to Expect Photo" height="420" width="584" class="" />
+          </div>
         </div>
     </div>
 </section>
