Updated the Waranty section no the costco microsite

--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@
 </section>
 
   <section id="waranty">
-    <div class="container">
-        <div class="row">
-          <h1>Waranty</h1>
-        </div>
+    <div class="container-fluid full-bg">
+      <div class="caption-block">
+        Sunrun offers best-in-class equipment, including warranties directly from manufacturers.  Our high quality workmanship is backed by 20 years of residential solar experience, with a 10 year workmanship warranty. Your purchase also includes an industry-leading 15 year roof penetration warranty to protect your roof.
+      </div>
     </div>
 </section>
 
