fix heights of logos in nav, font sizes and background position on member benefits section

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll  hidden-xs hidden-sm hidden-md" href="#page-top"><img src="img/sunrun-logo.svg" alt="Sunrun Logo" height="68" /></a>
-            <a class="navbar-brand page-scroll  hidden-lg" href="#page-top"><img src="img/sunrun-costco-logo.png" alt="Sunrun/Costco Logo" width="100%" /></a>
+            <a class="navbar-brand page-scroll  hidden-xs hidden-sm hidden-md" href="#page-top"><img src="img/sunrun-logo.svg" alt="Sunrun Logo" height="45" /></a>
+            <a class="navbar-brand page-scroll  hidden-lg" href="#page-top"><img src="img/sunrun-costco-logo.png" alt="Sunrun/Costco Logo" height="100%" /></a>
         </div>
         <div class="navbar-notice col-lg-7 hidden-xs">
           NOTE: You have left Costco.com website and are entering the home improvement website provided for Costco members by Sunrun. This site was created to provide more information and to schedule consultations for Costco members. To review the privacy policy, click here.
         </div>
         <div class="navbar-right col-lg-2 hidden-xs hidden-sm hidden-md">
-          <a class="navbar-brand" href="#page-top"><img src="img/costco-logo.png" alt="Costco Logo" height="78" /></a>
+          <a class="navbar-brand" href="#page-top"><img src="img/costco-logo.png" alt="Costco Logo" height="45" /></a>
         </div>
     </div>
     <!-- /.container-fluid -->
@@ -111,7 +111,7 @@
   					#1 
   				</h4>
   				<p>
-  					residential solar company in the US 
+  					residential solar company in the US*
   				</p>
   				<hr>
   			</div>
